# kanga-rpm-rs

./: .gitignore  Cargo.toml  rustfmt.toml
src/: compat_tests.rs  constants.rs  errors.rs  lib.rs  sequential_cursor.rs  tests.rs
src/rpm/: builder.rs  compressor.rs  mod.rs  package.rs
src/rpm/headers/: header.rs  lead.rs  mod.rs  signature_builder.rs  types.rs
src/rpm/signature/: mod.rs  pgp.rs  traits.rs
test_assets/: y2038.xml
