[package]
name = "kanga-rpm-rs"
version = "0.7.0"
authors = [
    "David Cuthbert <dacut@kanga.org>",
    "René Richter <richterrettich@gmail.com>",
    "Bernhard Schuster <bernhard@ahoi.io>"
]
edition = "2018"
license = "Apache-2.0"
description = "A pure Rust library for building and parsing RPM files."
homepage = "https://github.com/dacut/kanga-rpm-rs"
repository = "https://github.com/dacut/kanga-rpm-rs"
readme = "README.md"
keywords = ["RPM", "packaging"]
categories = ["parsing", "development-tools"]

[lib]
name = "rpm"

[dependencies]
chrono = "0.4"
cpio = "0.2"
enum-display-derive = "0.1"
enum-primitive-derive = "0.2"
hex = { version = "0.4", features = ["std"] }
itertools = "0.10"
# consider migrating to flate2
libflate = "1"
log = "0.4"
md-5 = "0.9"
nom = "7.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pgp = { version = "0.7.2", optional = true }
rand = { version = "0.8" }
sha1 = "0.6"
sha2 = "0.9"
thiserror = "1"
zstd = "0.9.0"

[dev-dependencies]
rsa = { version = "^0.5.0" }
rsa-der = { version = "^0.2.1" }
env_logger = "0.9"
itertools = "0.10"
serial_test = "0.5"
utime = "^0.3"

[features]
default = ["signature-pgp"]

signature-pgp = ["signature-meta", "pgp"]
signature-meta = []
test-with-podman = ["signature-meta"]
test-with-docker = ["signature-meta"]